Fix spacing in upper header in mobile

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -109,7 +109,7 @@ body{
         top: 0;
         justify-content: space-between;
         height: 100vh;
-        gap: max(10vh, 50px);
+        gap: max(10vh, 80px);
         flex: 0 1 max(450px, 20vw);
         padding-right: 0;
     }
@@ -217,7 +217,7 @@ body{
 
     .indicator{
         font-weight: 400;
-        display: inline-block;
+        display: inline;
         animation: blink 1s infinite;
     }
 
@@ -346,7 +346,7 @@ body{
             position: unset;
             padding: 0;
             justify-content: flex-start;
-            gap: max(4vh, 20px);
+            // gap: max(4vh, 20px);
             height: fit-content;
             // top: 0;
             // justify-content: space-between;
